--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,11 @@ body, html {
   margin: 0;
   height: 100%;
 }
-
+#fix {
+  position:fixed;
+  height:100%;
+  width:100%;
+}
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
 .clearfix:before, .clearfix:after {
   content: " ";
@@ -69,6 +73,7 @@ a:hover {
 }
 
 .os-phrases h2 {
+  position:fixed;
   font-family: 'Dosis', 'Lato', sans-serif;
   font-size: 70px;
   font-weight: 200;
@@ -88,6 +93,7 @@ a:hover {
 .os-phrases h2,
 .os-phrases h2 > span {
   height: 100%;
+  psoition-:fixed;
   /* Centering with flexbox */
   display: -webkit-box;
   display: -moz-box;
@@ -132,9 +138,9 @@ a:hover {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  -webkit-animation: OpeningSequence 5.2s linear forwards;
+  /*-webkit-animation: OpeningSequence 5.2s linear forwards;
   -moz-animation: OpeningSequence 5.2s linear forwards;
-  animation: OpeningSequence 5.2s linear forwards;
+  animation: OpeningSequence 5.2s linear forwards;*/
 }
 
 .os-phrases h2:nth-child(2) > span > span > span {
