--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ a:hover {
 .os-phrases h2 {
   position:fixed;
   font-family: 'Dosis', 'Lato', sans-serif;
-  font-size: 70px;
+  font-size: 4vw;
   font-weight: 200;
   width: 100%;
   overflow: hidden;
@@ -298,7 +298,7 @@ a:hover {
 /* Bold words */
 .os-phrases h2:first-child .word5,
 .os-phrases h2:nth-child(2) .word4,
-.os-phrases h2:nth-child(4) .word2 {
+.os-phrases h2:nth-child(4) .word2,.os-phrases h2:nth-child(5) .word2 {
   font-weight: 600;
 }
 .fader
