--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,26 @@ body, html {
   margin: 0;
   height: 100%;
 }
+.centered { top:0; bottom:0; left:0; right:0; margin:auto; }
+
+#effe-L {
+  position: fixed;
+  z-index: 0;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(26, 148, 198);
+}
+#effe-T {
+  position: fixed;
+  z-index: 0;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(26, 148, 198);
+}
 #fix {
   position:fixed;
   height:100%;
