--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@ left:-100vw;
   top:0;
   left:0;
   width: 100%;
-  height: 40vh;
-  background-color: rgb(26, 148, 198);
+  height: 100vh;
+  /*background-color: rgb(26, 148, 198);*/
+  background-color: #43C6DB;
 }
 #effe-T {
   position: fixed;
@@ -343,3 +344,15 @@ a:hover {
 {
   display: none;
 }
+.os-phrases h2:nth-child(6) {
+top:-20%;
+}
+.os-phrases h2:nth-child(6) {
+position: absolute;
+bottom: 0;
+left:0;
+}
+.os-phrases h2:nth-child(6) {
+position: absolute;
+bottom: 0;
+right:0;}
