--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ left:-100vw;
   width: 100%;
   height: 100vh;
   /*background-color: rgb(26, 148, 198);*/
-  background-color: #43C6DB;
+  /*background-color: #43C6DB;*/
 }
 #benny {
   position: fixed;
