--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,17 @@ left:-100vw;
   background:url(../benny-2.jpg);
   background-size: cover;
 }
+#benny3 {
+  position: fixed;
+  z-index: 0;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  /*background-color: rgb(26, 148, 198);*/
+  background:url(../benny3.jpg);
+  background-size: cover;
+}
 #effe-T {
   position: fixed;
   z-index: 0;
