--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,18 @@ left:-100vw;
   /*background-color: rgb(26, 148, 198);*/
   /*background-color: #43C6DB;*/
 }
+#znet-live 
+{
+  position: fixed;
+  z-index: 0;
+  top:0;
+  right:0;
+  width : 8%;
+  height: 5%;
+  /*background-color: rgb(26, 148, 198);*/
+  background:url(../znet.jpg);
+  background-size: contain;
+}
 #benny {
   position: fixed;
   z-index: 0;
@@ -156,6 +168,7 @@ left:-100vw;
   background:url(../BennyM.jpg);
   background-size: cover;
 }
+
 #benny2 {
   position: fixed;
   z-index: 0;
